include /usr/local/bin in path

--- a/roles/charts/tasks/main.yml
+++ b/roles/charts/tasks/main.yml
@@ -16,7 +16,7 @@
   become: true
 
 - name: Install helm diff plugin
-  shell: helm plugin list | grep diff || helm plugin install https://github.com/databus23/helm-diff
+  shell: /usr/local/bin/helm plugin list | grep diff || /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff
 - name: Copy helmfile
   ansible.builtin.template:
     src: "{{item}}"
@@ -33,19 +33,23 @@
   - metrics-server-values.yaml
 
 - name: Install local-path-provisioner
-  shell: "kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v{{local_path_provisioner_version}}/deploy/local-path-storage.yaml"
+  shell: "/usr/local/bin/kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v{{local_path_provisioner_version}}/deploy/local-path-storage.yaml"
 - name: Install Helm charts
-  shell: "helmfile apply -f helmfile-1.yaml.j2"
-  args: 
-    chdir: /tmp
-
-- name: Wait for ingress
-  shell: "kubectl -n ingress-nginx rollout status deployment/ingress-nginx-controller"
-
-- name: Install Helm charts
-  shell: "helmfile apply -f helmfile-2.yaml.j2"
+  shell: "/usr/local/bin/helmfile apply -f helmfile-1.yaml.j2"
   args:
     chdir: /tmp
+  environment:
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+
+- name: Wait for ingress
+  shell: "/usr/local/bin/kubectl -n ingress-nginx rollout status deployment/ingress-nginx-controller"
+
+- name: Install Helm charts
+  shell: "/usr/local/bin/helmfile apply -f helmfile-2.yaml.j2"
+  args:
+    chdir: /tmp
+  environment:
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
 
 - include_tasks: cleanup.yml
 
