--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -99,32 +99,32 @@
     cp_endpoint: "{% if hostvars[groups['control_plane'][0]]['loadbalancer_int_ip'] is defined %}{{hostvars[groups['control_plane'][0]]['loadbalancer_int_ip']}}{% else %}{{hostvars[groups['control_plane'][0]]['internal_ip']}}{% endif %}"
 
 - name: Generate Kubeconfigs (1/4)
-  ansible.builtin.shell: "kubectl config set-cluster kubernetes --certificate-authority=/etc/kubernetes/pki/ca.crt --embed-certs=true --server=https://{{cp_endpoint}}:6443 --kubeconfig=/etc/kubernetes/kubelet.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-cluster kubernetes --certificate-authority=/etc/kubernetes/pki/ca.crt --embed-certs=true --server=https://{{cp_endpoint}}:6443 --kubeconfig=/etc/kubernetes/kubelet.conf"
   when: "'worker' in group_names"
 
 - name: Generate Kubeconfigs (1/4)
-  ansible.builtin.shell: "kubectl config set-cluster kubernetes --certificate-authority=/etc/kubernetes/pki/ca.crt --embed-certs=true --server=https://{{cp_endpoint}}:6443 --kubeconfig=/etc/kubernetes/proxy.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-cluster kubernetes --certificate-authority=/etc/kubernetes/pki/ca.crt --embed-certs=true --server=https://{{cp_endpoint}}:6443 --kubeconfig=/etc/kubernetes/proxy.conf"
 
 - name: Generate Kubeconfigs (2/4)
-  ansible.builtin.shell: "kubectl config set-credentials system:node:{{ansible_hostname}} --client-certificate=/etc/kubernetes/pki/{{ansible_hostname}}.crt --client-key=/etc/kubernetes/pki/{{ansible_hostname}}.key --embed-certs=true --kubeconfig=/etc/kubernetes/kubelet.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-credentials system:node:{{ansible_hostname}} --client-certificate=/etc/kubernetes/pki/{{ansible_hostname}}.crt --client-key=/etc/kubernetes/pki/{{ansible_hostname}}.key --embed-certs=true --kubeconfig=/etc/kubernetes/kubelet.conf"
   when: "'worker' in group_names"
 
 - name: Generate Kubeconfigs (2/4)
-  ansible.builtin.shell: "kubectl config set-credentials system:kube-proxy --client-certificate=/etc/kubernetes/pki/kube-proxy.crt --client-key=/etc/kubernetes/pki/kube-proxy.key --embed-certs=true --kubeconfig=/etc/kubernetes/proxy.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-credentials system:kube-proxy --client-certificate=/etc/kubernetes/pki/kube-proxy.crt --client-key=/etc/kubernetes/pki/kube-proxy.key --embed-certs=true --kubeconfig=/etc/kubernetes/proxy.conf"
 
 - name: Generate Kubeconfigs (3/4)
-  ansible.builtin.shell: "kubectl config set-context default --cluster=kubernetes --user=system:node:{{ansible_hostname}} --kubeconfig=/etc/kubernetes/kubelet.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-context default --cluster=kubernetes --user=system:node:{{ansible_hostname}} --kubeconfig=/etc/kubernetes/kubelet.conf"
   when: "'worker' in group_names"
 
 - name: Generate Kubeconfigs (3/4)
-  ansible.builtin.shell: "kubectl config set-context default --cluster=kubernetes --user=system:kube-proxy --kubeconfig=/etc/kubernetes/proxy.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config set-context default --cluster=kubernetes --user=system:kube-proxy --kubeconfig=/etc/kubernetes/proxy.conf"
 
 - name: Generate Kubeconfigs (4/4)
-  ansible.builtin.shell: "kubectl config use-context default --kubeconfig=/etc/kubernetes/kubelet.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config use-context default --kubeconfig=/etc/kubernetes/kubelet.conf"
   when: "'worker' in group_names"
 
 - name: Generate Kubeconfigs (4/4)
-  ansible.builtin.shell: "kubectl config use-context default --kubeconfig=/etc/kubernetes/proxy.conf"
+  ansible.builtin.shell: "/usr/local/bin/kubectl config use-context default --kubeconfig=/etc/kubernetes/proxy.conf"
 
 - name: Create systemd unit file
   ansible.builtin.template:
@@ -162,13 +162,13 @@
   ansible.builtin.service:
     name: kubelet
     enabled: true
-    state: started
+    state: restarted
   when: "'worker' in group_names"
 
 - name: Start service
   ansible.builtin.service:
     name: kube-proxy
     enabled: true
-    state: started
+    state: restarted
 
 - include_tasks: cleanup.yml
