--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,12 +13,12 @@
 - include_tasks: certificate_authority.yml
 
 - name: Install kernel pre-requisites
-  ansible.builtin.shell: "dnf install -y kernel-devel-$(uname -r) kernel-modules-extra-$(uname -r)"
+  ansible.builtin.shell: "dnf install -y kernel-modules-extra-$(uname -r)"
   when: ansible_os_family == 'RedHat'
 
 - name: Install Base packages
   package:
-    name: ['unzip','conntrack','curl','tar','git']
+    name: ['unzip','conntrack','curl','tar','git','iptables']
 
 - include_tasks: cni.yml
   when: cni == "flannel"
