run as non root user

--- a/roles/common/tasks/certificate_authority.yml
+++ b/roles/common/tasks/certificate_authority.yml
@@ -16,7 +16,7 @@
 - name: Create CA keys
   local_action:
     module: ansible.builtin.shell
-    cmd: "openssl genrsa -out {{tmp_folder}}/{{item}}.key 4096"
+    cmd: "openssl genrsa -out {{tmp_folder}}/{{item}}.key 4096 && chown {{ lookup('env', 'USER') }} {{tmp_folder}}/{{item}}.key"
     args:
       chdir: "{{ tmp_folder }}"
   loop:
@@ -35,7 +35,7 @@
 - name: Create CA certificates
   local_action:
     module: ansible.builtin.shell
-    cmd: "openssl req -x509 -new -sha512 -noenc -key {{item.name}}.key -days 3652 -config ca.conf -out {{item.name}}.crt -subj \"{{item.subject}}\""
+    cmd: "openssl req -x509 -new -sha512 -noenc -key {{item.name}}.key -days 3652 -config ca.conf -out {{item.name}}.crt -subj \"{{item.subject}}\" && chown {{ lookup('env', 'USER') }} {{item.name}}.crt"
     args:
       chdir: "{{ tmp_folder }}"
   loop:
@@ -43,6 +43,4 @@
   - {name: etcd-ca, subject: "/CN=etcd-ca"}
   - {name: front-proxy-ca, subject: "/CN=kubernetes-front-proxy-ca"}
   run_once: true
-
-
 
