--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,7 +13,7 @@
 - include_tasks: certificate_authority.yml
 
 - name: Install kernel pre-requisites
-  ansible.builtin.shell: "dnf install -y kernel-modules-extra-$(uname -r)"
+  ansible.builtin.shell: "dnf install -y kernel-modules-extra"
   when: ansible_os_family == 'RedHat'
 
 - name: Install Base packages
