--- a/vars.yaml
+++ b/vars.yaml
@@ -1,5 +1,5 @@
 etcd_version: 3.6.1
-kubernetes_version: 1.33.1
+kubernetes_version: 1.33.2
 containerd_version: 2.1.1
 runc_version: 1.3.0
 cni_version: 1.7.1
@@ -12,3 +12,9 @@ local_path_provisioner_version: 0.0.31
 coredns_version: 1.42.2
 security_hardening: false
 cni: canal
+
+longhorn_enabled: true
+prometheus_enabled: true
+cert_manager_enabled: true
+ingress_nginx_enabled: true
+rancher_enabled: true
