--- a/roles/charts/tasks/main.yml
+++ b/roles/charts/tasks/main.yml
@@ -15,6 +15,9 @@
     chdir: /tmp
   become: true
 
+- set_fact:
+    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
+
 - name: Install helm diff plugin
   shell: /usr/local/bin/helm plugin list | grep diff || /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff
 - name: Copy helmfile
@@ -41,6 +44,7 @@
 
 - name: Wait for ingress
   shell: "/usr/local/bin/kubectl -n ingress-nginx rollout status deployment/ingress-nginx-controller"
+  when: ingress_nginx_enabled
 
 - block:
 
