--- a/vars.yaml
+++ b/vars.yaml
@@ -1,20 +1,23 @@
-etcd_version: 3.6.1
-kubernetes_version: 1.33.2
-containerd_version: 2.1.1
+etcd_version: 3.6.2
+kubernetes_version: 1.33.3
+containerd_version: 2.1.3
 runc_version: 1.3.0
 cni_version: 1.7.1
 flanneld_version: 0.27.0
 flannel_version: 1.7.1-flannel1
 canal_version: 3.30.0
-k9s_version: 0.50.6
+k9s_version: 0.50.9
 helmfile_version: 1.1.0
 local_path_provisioner_version: 0.0.31
-coredns_version: 1.42.2
+coredns_version: 1.43.0
 security_hardening: false
 cni: canal
 
-longhorn_enabled: true
-prometheus_enabled: true
-cert_manager_enabled: true
-ingress_nginx_enabled: true
-rancher_enabled: true
+longhorn_enabled: false
+prometheus_enabled: false
+cert_manager_enabled: false
+ingress_nginx_enabled: false
+rancher_enabled: false
+
+insecure_registries:
+  - '10.151.0.6:5000'
