--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -20,6 +20,19 @@
   package:
     name: ['unzip','conntrack','curl','tar','git','iptables']
 
+- set_fact:
+    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
+- set_fact:
+    all_ips: "{% for host in groups['all'] %}{{hostvars[host]['ip_address']}}{% if not loop.last %},{% endif %}{% endfor %}"
+
+- name: Create k8s env file
+  ansible.builtin.template:
+    src: k8s.env.j2
+    dest: /etc/k8s.env
+    mode: '0644'
+    owner: root
+    group: root
+
 - include_tasks: cni.yml
   when: cni == "flannel"
 
