--- a/vars.yaml
+++ b/vars.yaml
@@ -1,3 +1,6 @@
+######################
+# component versions
+######################
 etcd_version: 3.6.2
 kubernetes_version: 1.33.3
 containerd_version: 2.1.3
@@ -10,14 +13,24 @@ k9s_version: 0.50.9
 helmfile_version: 1.1.0
 local_path_provisioner_version: 0.0.31
 coredns_version: 1.43.0
+######################
+# environment
+######################
+http_proxy:
+https_proxy:
+no_proxy:
+######################
+# configuration
+######################
 security_hardening: false
 cni: canal
-
+insecure_registries:
+- '10.151.0.6:5000'
+######################
+# features
+######################
 longhorn_enabled: false
 prometheus_enabled: false
 cert_manager_enabled: false
 ingress_nginx_enabled: false
 rancher_enabled: false
-
-insecure_registries:
-  - '10.151.0.6:5000'
