--- a/create_cluster.yml
+++ b/create_cluster.yml
@@ -6,7 +6,7 @@
   - name: Wait for SSH to be available
     wait_for:
       port: 22
-      host: "{{ inventory_hostname }}"
+      host: "{{ ansible_host }}"
       delay: 1
       timeout: 600
       state: started
