--- a/sample_inventory/inventory.ini
+++ b/sample_inventory/inventory.ini
@@ -18,6 +18,7 @@ node4
 node5
 
 [all:vars]
+ansible_python_interpreter=auto_silent
 ansible_ssh_user=cloud-user
 ansible_ssh_private_key_file="./vars/id_rsa"
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPersist=120s'
