--- a/roles/worker/defaults/main.yml
+++ b/roles/worker/defaults/main.yml
@@ -1,4 +1,4 @@
 download_url: https://dl.k8s.io
-kubernetes_version: '1.30.0'
-containerd_version: '2.0.1'
-runc_version: '1.2.3'
+kubernetes_version: 1.33.3
+containerd_version: 2.1.3
+runc_version: 1.3.0
