--- a/create_cluster.yml
+++ b/create_cluster.yml
@@ -48,6 +48,21 @@
   roles:
     - worker
 
+- name: fetch-kubeconfig-label-nodes
+  hosts: control_plane[0]
+  any_errors_fatal: true
+  become: true
+  tags:
+    - post-install
+  tasks:
+    - name: Fetch kubeconfig
+      ansible.builtin.fetch:
+        src: /root/.kube/config
+        dest: /tmp/
+        flat: yes
+    - shell: "/usr/local/bin/kubectl label node {{ansible_hostname}} node-role.kubernetes.io/control-plane=true"
+    - shell: "/usr/local/bin/kubectl taint nodes {{ansible_hostname}} node-role.kubernetes.io/control-plane:NoSchedule"
+
 - name: install-cni-flannel
   hosts: all
   any_errors_fatal: true
@@ -96,5 +111,4 @@
     - charts
   roles:
     - charts
-
 
