--- a/roles/canal/tasks/main.yml
+++ b/roles/canal/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: Apply manifest
-  shell: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/refs/tags/v3.30.0/manifests/canal.yaml
+  shell: "kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/refs/tags/v{{canal_version}}/manifests/canal.yaml"
   delegate_to: "{{ groups['control_plane'][0] }}"
   run_once: true    
