make CA critical for newer python libraries

--- a/roles/common/files/ca.conf
+++ b/roles/common/files/ca.conf
@@ -4,8 +4,8 @@ prompt             = no
 x509_extensions    = ca_x509_extensions
 
 [ca_x509_extensions]
-basicConstraints = CA:TRUE
-keyUsage         = cRLSign, keyCertSign
+basicConstraints = critical, CA:TRUE
+keyUsage         = critical, cRLSign, keyCertSign
 
 [req_distinguished_name]
 C   = IN
