--- a/sample_inventory/vars.yaml
+++ b/sample_inventory/vars.yaml
@@ -1,18 +1,18 @@
 ######################
 # component versions
 ######################
-etcd_version: 3.6.2
-kubernetes_version: 1.33.3
-containerd_version: 2.1.3
-runc_version: 1.3.0
-cni_version: 1.7.1
-flanneld_version: 0.27.0
-flannel_version: 1.7.1-flannel1
-canal_version: 3.30.0
-k9s_version: 0.50.9
-helmfile_version: 1.1.0
-local_path_provisioner_version: 0.0.31
-coredns_version: 1.43.0
+etcd_version: 3.6.5
+kubernetes_version: 1.34.1
+containerd_version: 2.1.4
+runc_version: 1.3.1
+cni_version: 1.8.0
+flanneld_version: 0.27.3
+flannel_version: 1.8.0-flannel1
+canal_version: 3.30.3
+k9s_version: 0.50.12
+helmfile_version: 1.1.7
+local_path_provisioner_version: 0.0.32
+coredns_version: 1.43.3
 ######################
 # environment
 ######################
@@ -24,14 +24,15 @@ no_proxy:
 ######################
 security_hardening: false
 cni: canal
-insecure_registries:
-  - 'http://10.151.0.6:5000'
-  - 'https://10.4.5.6:8543'
+#insecure_registries: []
+# - 'http://10.151.0.6:5000'
+# - 'https://10.4.5.6:8543'
 ######################
 # features
 ######################
 longhorn_enabled: false
 prometheus_enabled: false
-cert_manager_enabled: false
-ingress_nginx_enabled: false
+cert_manager_enabled: true
+ingress_nginx_enabled: true
+local_path_storage_enabled: true
 rancher_enabled: false
